--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.1",
   "private": true,
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.6.4",
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
     "@cosmjs/proto-signing": "^0.29.5",
     "@cosmjs/stargate": "^0.29.5",
@@ -32,6 +33,8 @@
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/redux-logger": "^3.0.9",
+    "@walletconnect/crypto": "^1.0.3",
+    "@walletconnect/web3-provider": "^1.8.0",
     "array-move": "1.0.0",
     "assert": "^2.0.0",
     "axios": "^1.3.2",
@@ -48,6 +51,7 @@
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
+    "music-metadata-browser": "^2.5.9",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "postprocessing": "6.29.3",
@@ -80,6 +84,7 @@
     "react-spring-3d-carousel": "^1.3.4",
     "react-toastify": "^9.1.1",
     "react-tsparticles": "^2.9.3",
+    "react-universal-interface": "^0.6.2",
     "react-use": "^17.4.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -98,11 +103,14 @@
     "typescript": "^4.7.4",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.75.0"
+    "web3": "^1.8.2",
+    "web3modal": "^1.9.12",
+    "webpack": "^5.75.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
