--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.6.4",
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
+    "@cosmjs/launchpad": "^0.27.1",
     "@cosmjs/proto-signing": "^0.29.5",
     "@cosmjs/stargate": "^0.29.5",
     "@emotion/react": "^11.10.5",
@@ -72,6 +73,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
     "react-outside-click-handler": "^1.3.0",
     "react-query": "^3.39.3",
