--- a/package.json
+++ b/package.json
@@ -17,18 +17,12 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.7",
     "@mui/styled-engine": "^5.11.0",
-    "@react-three/drei": "9.57.2",
-    "@react-three/fiber": "7.0.26",
-    "@react-three/postprocessing": "^2.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "@sl-codeblaster/react-3d-animated-card": "^1.0.8",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.3.0",
     "@types/glidejs__glide": "^3.4.2",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
@@ -36,8 +30,7 @@
     "@types/redux-logger": "^3.0.9",
     "@walletconnect/crypto": "^1.0.3",
     "@walletconnect/web3-provider": "^1.8.0",
-    "@web3-react/core": "^8.2.0",
-    "@web3-react/walletconnect-connector": "^6.1.6",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "array-move": "1.0.0",
     "assert": "^2.0.0",
     "axios": "^1.3.2",
@@ -46,10 +39,13 @@
     "clsx": "^1.2.1",
     "crypto-browserify": "^3.12.0",
     "downloadjs": "^1.4.7",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "emoji-mart": "3.0.1",
     "filesize": "^10.0.6",
     "fs": "^0.0.1-security",
     "gltf-pipeline": "4.0.1",
+    "html-react-parser": "^3.0.16",
     "https-browserify": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
@@ -68,6 +64,7 @@
     "react-contenteditable": "^3.3.6",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-easy-marquee": "^1.2.4",
     "react-error-boundary": "^3.1.4",
     "react-fast-marquee": "^1.3.5",
@@ -101,7 +98,6 @@
     "sweetalert2": "^11.7.2",
     "swiper": "8.2.2",
     "three": "0.138.0",
-    "three-stdlib": "2.21.6",
     "timeago.js": "^4.0.2",
     "tsparticles": "^2.9.3",
     "typescript": "^4.7.4",
