--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-spring": "6.1.8",
     "react-spring-3d-carousel": "^1.3.4",
     "react-toastify": "^9.1.1",
+    "react-tooltip": "^5.13.0",
     "react-tsparticles": "^2.9.3",
     "react-universal-interface": "^0.6.2",
     "react-use": "^17.4.0",
